--- a/OOP/README.org
+++ b/OOP/README.org
@@ -22,3 +22,16 @@ obj3 = BigObject()
 
 print(type(obj1)) # this prints <class '__main__.BigObject'>
 #+end_src
+
+* ~__init__~ method
++ The ~__init__~ method in a class is what is called as a dunder method or magic method. It is a constructor method within a class.
+
+#+begin_src python
+class BigObject:
+    def __init__(self, name):
+        self.name = name
+#+end_src
+
++ In the above example code, we can see that the ~self~ keyword is set as one of the parameters of the ~__init__~ method. In fact it is a default keyword in all the methods within a class.
++ ~self~ refers to the object created from a class.
++ Dot notation is used to assign and access attributes of an object created from a class. In this example, ~self.name~ refers to the ~name~ attribute of ~self~, which represents the object.
