--- a/OOP/README.org
+++ b/OOP/README.org
@@ -35,3 +35,6 @@ class BigObject:
 + In the above example code, we can see that the ~self~ keyword is set as one of the parameters of the ~__init__~ method. In fact it is a default keyword in all the methods within a class.
 + ~self~ refers to the object created from a class.
 + Dot notation is used to assign and access attributes of an object created from a class. In this example, ~self.name~ refers to the ~name~ attribute of ~self~, which represents the object.
+
+* Class Object Attributes
++ Class object attributes are attributes of a class that do not change. They can be referred to using the class blueprint itself, compared to the attributes defined in the constructor function ~__init__~, which are referred to using ~self~.
